Implement DB and Identity

--- a/JwtAuthAspNetWebAPI/appsettings.json
+++ b/JwtAuthAspNetWebAPI/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "local": "Data Source=localhost\\SQLEXPRESS;Database=JwtAuthAspNet8WebAPIDB;Trusted_Connection=True;TrustServerCertificate=true;"
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:7004",
+    "ValidAudience": "https://localhost:3000",
+    "Secret": "Thisismysecretkey256SHAforMyApplicationJWTAPI2024" // Secret key for JWT token
+  }
 }
